--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
       <div class="container">
         <div class="description">
           <h1 class="title">Hello, Welcome to my official website
-             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, molestiae similique! Molestias, in enim
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, molestiae similique! Molestias, in enim
               accusantium dignissimos dicta, totam unde ullam, voluptas magnam recusandae mollitia facilis nemo alias
               consectetur corporis porro!</p>
-              <button class="btn btn-outline-secondary btn-lg">See more</button>
+            <button class="btn btn-outline-secondary btn-lg">See more</button>
           </h1>
         </div>
-      </div> 
+      </div>
 
     </div>
   </header>
@@ -110,6 +110,94 @@
       </div>
     </div>
   </div>
+  <div class="blog">
+    <div class="container">
+      <h1 class="text-center">Blog</h1>
+      <div class="row">
+        <div class="col-lg-4 col-md-4 col-sm-12">
+          <div class="card">
+            <div class="card-img">
+              <img src="images/posts/polit.jpg" class="img-fluid">
+            </div>
+            <div class="card-body">
+              <h4 class="card-title">Post Title</h4>
+              <p class="card-text">proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              </p>
+            </div>
+            <div class="card-footer">
+              <a href="#" class="card-link">Read more</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 col-lg-4 col-sm-12">
+          <div class="card">
+            <div class="card-image">
+              <img src="images/posts/images.jpg" class="img-fluid">
+            </div>
+            <div class="card-body">
+              <h4 class="card-title">Post Title</h4>
+              <p class="card-text">proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
+            <div class="card-footer">
+              <a href="#" class="card-link">Read more</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-12">
+          <div class="card">
+            <div class="card-image">
+              <img src="images/posts/imag2.jpg" class="img-fluid">
+            </div>
+             <div class="card-body">
+               <h4 class="card-title">Post Title</h4>
+               <p class="card-text" >proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+             </div>
+             <div class="card-footer">
+               <a href="#" class="card-link">Read more</a>
+             </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="team">
+    <div class="container">
+      <h1 class="text-center">Our Team</h1>
+      <div class="row">
+        <div class="col-lg-3 col-md-3 col-sm-12 item">
+          <img src="images/LRM_EXPORT_567386951677932_20190118_123103673.jpeg" class="img-fluid" alt="team">
+          <div class="des">
+            Bhagi
+          </div>
+          <span class="text-muted">Manager</span>
+        </div>
+        <div class="col-lg-3 col-md-3 col-sm-12 item">
+          <img src="images/IMG_0854.jpeg" class="img-fluid" alt="team">
+          <div class="des">
+            Bhagya
+          </div>
+          <span class="text-muted">Senior Engineer</span>
+        </div>
+        <div class="col-lg-3 col-md-3 col-sm-12 item">
+          <img src="images/IMG_0951.jpeg" class="img-fluid" alt="team">
+          <div class="des">
+            Bhagi
+          </div>
+          <span class="text-muted">Front End Developer</span>
+        </div>
+        <div class="col-lg-3 col-md-3 col-sm-12 item">
+          <img src="images/IMG_1088.jpeg" class="img-fluid" alt="team">
+          <div class="des">
+            Bhagya
+          </div>
+          <span class="text-muted">Team Manager</span>
+        </div>
+      </div>
+    </div>
+  </div>
+  
   <script type="text/javascript" src="main.js"></script>
 </body>
 
